<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container">
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:ellipsize="end"
            android:layout_gravity="bottom|end"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Gray.Button"
                android:text="@string/ac"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_erase"
                style="@style/Gray.Button"
                android:text="@string/plus_minus"
                android:layout_marginHorizontal="18dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                android:layout_marginEnd="18dp"
                style="@style/Gray.Button"
                android:text="@string/percent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_division"
                style="@style/Orange.Button"
                android:text="@string/division"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Dark.Button"
                android:text="@string/seven"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Dark.Button"
                android:text="@string/eight"
                android:layout_marginHorizontal="18dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Button"
                android:text="@string/nine"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/Orange.Button"
                android:text="@string/multiplication"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Dark.Button"
                android:text="@string/four"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Dark.Button"
                android:text="@string/five"
                android:layout_marginHorizontal="18dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Button"
                android:text="@string/six"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/minus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Dark.Button"
                android:text="@string/one"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Dark.Button"
                android:text="@string/two"
                android:layout_marginHorizontal="18dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Button"
                android:text="@string/three"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:text="@string/plus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/Dark.Button"
                android:text="@string/zero"
                android:layout_width="180dp"
                android:paddingEnd="120dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Dark.Button"
                android:text="@string/dot"
                android:layout_marginHorizontal="18dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"

                android:text="@string/equal"
                />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>